Style: fix max height of images, prevent overflow

--- a/src/app/components/product-item/product-item.component.css
+++ b/src/app/components/product-item/product-item.component.css
@@ -7,6 +7,7 @@ img {
     list-style-type: none;
     width: 290px;
     padding: 20px;
+    max-height: 375px;
     margin: 6px 6px;        
     /* border: 1px solid #33B5E5; */
   } 
